--- a/example.config.yaml
+++ b/example.config.yaml
@@ -4,3 +4,10 @@ secret: "2rgVKA0qkk751exampledVNF7zsleX"
 
 # kimiAPI
 kimi_key: "kimi开放平台API"
+kimi_url: "https://api.moonshot.cn/v1"
+kimi_model: "moonshot-v1-8k"
+
+#SiliconCloud 接口
+sk_key: "sk-dtthnofmucfiqxxxxxxxxxxxaeabcczckrwnoj"
+sk_url: "https://api.siliconflow.cn/v1"
+sk_model: "deepseek-ai/DeepSeek-V2.5"
